# hass-bazarr

./: .releaserc.json  README.md  hacs.json  pyproject.toml
.github/workflows/: release.yml
custom_components/bazarr/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py
custom_components/bazarr/translations/: en.json
